--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"typescript": "^3.9.10",
 		"vscode-test": "^1.6.1",
 		"webpack": "^5.53.0",
-		"webpack-cli": "^3.3.12"
+		"webpack-cli": "^3.3.12",
+		"set-value": ">=4.0.1"
 	}
 }
