--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "simply-view-image-for-python-opencv-debugging",
 	"displayName": "simply_view_image_for_python_opencv_debugging",
 	"description": "simply view the image of the image variables when debugging python with opencv",
-	"version": "0.0.8",
+	"version": "0.0.9",
 	"publisher": "johnguo",
 	"engines": {
-		"vscode": "^1.44.0"
+		"vscode": "^1.60.0"
 	},
 	"repository": {
 		"type": "git",
@@ -60,16 +60,16 @@
 		"@types/mocha": "^7.0.2",
 		"@types/node": "^13.13.52",
 		"@types/vscode": "^1.60.0",
-		"@typescript-eslint/eslint-plugin": "^2.34.0",
-		"@typescript-eslint/parser": "^2.34.0",
-		"eslint": "^6.8.0",
+		"@typescript-eslint/eslint-plugin": "^5.9.1",
+		"@typescript-eslint/parser": "^5.9.1",
+		"eslint": "^8.6.0",
 		"glob": "^7.1.7",
-		"mocha": "^7.2.0",
+		"mocha": "^9.1.4",
+		"set-value": ">=4.0.1",
 		"ts-loader": "^7.0.5",
 		"typescript": "^3.9.10",
 		"vscode-test": "^1.6.1",
 		"webpack": "^5.53.0",
-		"webpack-cli": "^3.3.12",
-		"set-value": ">=4.0.1"
+		"webpack-cli": "^4.9.1"
 	}
 }
