--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
 	"name": "simply-view-image-for-python-opencv-debugging",
 	"displayName": "simply_view_image_for_python_opencv_debugging",
 	"description": "simply view the image of the image variables when debugging python with opencv",
-	"version": "0.0.9",
+	"version": "0.0.10",
 	"publisher": "johnguo",
 	"engines": {
-		"vscode": "^1.60.0"
+		"vscode": "^1.86.1"
 	},
 	"repository": {
 		"type": "git",
@@ -15,7 +15,8 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onDebugResolve:python"
+		"onDebugResolve:python",
+		"onDebugResolve:debugpy"
 	],
 	"main": "./dist/extension.js",
 	"contributes": {
